--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <br>
     <p>
         <ul>
-            <li><a href="./recipes/Banana-Bread.html">Banana Bread</a></li>
-            <li><a href="./recipes/Homemade-Pizza.html">Homemade-Pizza</a></li>
+            <li><a href="./recipes/Banana-Bread.html">Banana Bread</a>
+            <br>
+        <img src="./images/banana-bread.jpeg"> </li>
+            <li><a href="./recipes/Homemade-Pizza.html">Homemade-Pizza</a>
+            <br>
+        <img src="./images/homemade-pizza.jpeg"> </li>
             <li>Tuna Pasta-Bake</li>
-            <li>Roast Dinner></li>
+            <li>Roast Dinner</li>
         </ul>
     </p>
 </body>
