--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Favourite Recipes</title>
+    <title>My Top Recipes</title>
 </head>
 <body>
     <h1>My Top Recipes</h1>
@@ -12,12 +12,32 @@
         <ul>
             <li><a href="./recipes/Banana-Bread.html">Banana Bread</a>
             <br>
-        <img src="./images/banana-bread.jpeg"> </li>
+            <br>
+        <img src="./images/banana-bread.jpeg"
+        height="200"
+        width="250"> </li>
+        <br>
             <li><a href="./recipes/Homemade-Pizza.html">Homemade-Pizza</a>
             <br>
-        <img src="./images/homemade-pizza.jpeg"> </li>
-            <li>Tuna Pasta-Bake</li>
-            <li>Roast Dinner</li>
+            <br>
+        <img src="./images/homemade-pizza.jpeg"
+        height="250"
+        width="200"> </li>
+        <br>
+        <br>
+            <li>Tuna Pasta-Bake (TBA)
+                <br>
+                <img src="./images/tuna-pasta-bake.jpeg"
+                height="200"
+                width="250">
+            </li>
+            <br>
+            <li>Roast Dinner(TBA)
+                <br>
+                <img src="./images/roast-dinner.jpeg"
+                height="250"
+                width="200">
+            </li>
         </ul>
     </p>
 </body>
