--- a/index.html
+++ b/index.html
@@ -4,40 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Top Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My Top Recipes</h1>
     <br>
     <p>
         <ul>
+            <div>
             <li><a href="./recipes/Banana-Bread.html">Banana Bread</a>
-            <br>
-            <br>
-        <img src="./images/banana-bread.jpeg"
-        height="200"
-        width="250"> </li>
         <br>
+            <img class="img" src="./images/banana-bread.jpeg"> </li>
+            </div>
+        <br>
+            <div>
             <li><a href="./recipes/Homemade-Pizza.html">Homemade-Pizza</a>
-            <br>
-            <br>
-        <img src="./images/homemade-pizza.jpeg"
-        height="250"
-        width="200"> </li>
+        <br>
+            <img class="img tall" src="./images/homemade-pizza.jpeg"></li>
+            </div>
         <br>
         <br>
+            <div>
             <li>Tuna Pasta-Bake (TBA)
-                <br>
-                <img src="./images/tuna-pasta-bake.jpeg"
-                height="200"
-                width="250">
+        <br>
+            <img class="img" src="./images/tuna-pasta-bake.jpeg">
             </li>
-            <br>
+            </div>
+        <br>
+        <div>
             <li>Roast Dinner(TBA)
                 <br>
-                <img src="./images/roast-dinner.jpeg"
-                height="250"
-                width="200">
+                <img class="img tall" src="./images/roast-dinner.jpeg">
             </li>
+            </div>
         </ul>
     </p>
 </body>
