--- a/recipes/Banana-Bread.html
+++ b/recipes/Banana-Bread.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Best Banana Bread</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>The <em>Very</em> best banana bread recipe</h1>
     <br>
-    <img src="../images/banana-bread.jpeg" 
-    alt="Banana-Bread" 
-    height="250"
-    width="300">
+    <img class="img large" src="../images/banana-bread.jpeg" 
+    alt="Banana-Bread">
     <br>
     <p>
         Here is a quick guide on how to make Banana Bread.<br>
