New images added, including overlapped images. New Nav bar added, with working links.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>My Top Recipes</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <div class="topnav">
+        <a class="active" href="./index.html">Homepage</a>
+        <a href="./recipes/Banana-Bread.html">Banana Bread</a>
+        <a href="./recipes/Homemade-Pizza.html">Homemade Pizza</a>
+        <a href="#about">About</a>
+      </div>
+</header>
 <body>
     <h1>My Top Recipes</h1>
     <br>
@@ -18,9 +26,11 @@
             </div>
         <br>
             <div>
-            <li><a href="./recipes/Homemade-Pizza.html">Homemade-Pizza</a>
+            <li><a href="./recipes/Homemade-Pizza.html">Homemade-Pizza</a></li>
         <br>
-            <img class="img tall" src="./images/homemade-pizza.jpeg"></li>
+            
+            <img id="background-pizza" src="./images/pizza-2.jpeg">
+            <img id="foreground-pizza" src="./images/homemade-pizza.jpeg">
             </div>
         <br>
         <br>
