--- a/recipes/Banana-Bread.html
+++ b/recipes/Banana-Bread.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Best Banana Bread</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
+<header>
+    <div class="topnav">
+        <a href="../index.html">Homepage</a>
+        <a class="active" href="./Banana-Bread.html">Banana Bread</a>
+        <a href="./Homemade-Pizza.html">Homemade Pizza</a>
+        <a href="#about">About</a>
+      </div>
+</header>
 <body>
     <h1>The <em>Very</em> best banana bread recipe</h1>
     <br>
