--- a/recipes/Homemade-Pizza.html
+++ b/recipes/Homemade-Pizza.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authentic Itallian Homemade Pizza</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+      
+      <div class="topnav">
+        <a href="../index.html">Homepage</a>
+        <a href="./Banana-Bread.html">Banana Bread</a>
+        <a class="active" href="./Homemade-Pizza.html">Homemade Pizza</a>
+        <a href="#about">About</a>
+      </div>
+
     <h1>The Most(Least) Authentic Itallian Pizza</h1>
     <br>
-    <img src="../images/homemade-pizza.jpeg"
-    alt="Pizza"
-    height="300"
-    width="250"
-    >
+    <img class="img tall" src="../images/homemade-pizza.jpeg"
+    alt="Pizza">
+    <img class="img tall" src="../images/pizza-2.jpeg">
     <br>
     <p>Below is a quick and easy guide to creating <em>Homemade</em> Pizza</p>
     <br>
@@ -51,9 +57,7 @@
         </ol>
         <br>
         <p>Below is an example of a well risen dough.</p><br>
-        <img src="../images/dough-risen.jpeg"
-        height="150"
-        width="250">
+        <img class="img wide" src="../images/dough-risen.jpeg">
     </p>
     <br>
     <h3>Prepaing the Pizza:</h3>
@@ -66,7 +70,8 @@
             Starting at the center and working outwards, use your fingertips to press the dough to 1/2-inch thick.<br>
             Turn and stretch the dough until it will not stretch further.<br>
             Use your palm to flatten the edge of the dough where it is thicker. Pinch the edges if you want to form a lip.<br>
-        <img src="../images/kneaded-dough.jpeg"> </p></li>
+            <br>
+        <img class="img" src="../images/kneaded-dough.jpeg"> </p></li>
         <li><h4>Spread with sauce and toppings:</h4>Spoon on the tomato sauce, sprinkle with cheese, and place your desired toppings on the pizza. Be careful not to overload the pizza with too many toppings, or your pizza will be soggy.</li>
         <li><h4>Finnaly time too cook:</h4>Bake pizza in the 220°C oven, one at a time, until the crust is browned and the cheese is golden, about 10 to 15 minutes.</li>
     </ol>
